Updated docker configuration to support auto-pull from GitHub on commits

--- a/esp8266_server.conf
+++ b/esp8266_server.conf
@@ -1,6 +1,7 @@
 [program:esp8266]
 directory=/root/esp8266_iot_node/
 command=python /root/esp8266_iot_node/server.py
+command=python /root/esp8266_iot_node/Git-Auto-Deploy/gitautodeploy --config config.json
 autorestart=true
 user=root
 redirect_stderr=true
